[workspace]
members = ["cyper-core", "cyper", "cyper-axum"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/compio-rs/cyper"

[workspace.dependencies]
compio = "0.16.0"
compio-quic = "0.5.0"
cyper-core = { path = "./cyper-core", default-features = false, version = "0.5.0" }
socket2 = "0.6"

futures-channel = "0.3.31"
futures-util = "0.3.31"
send_wrapper = "0.6"

rustls = { version = "0.23.33", default-features = false }
rustls-platform-verifier = "0.6.1"

hyper = "1.7.0"
hyper-util = "0.1.17"

tower = "0.5.2"
tower-service = "0.3.3"

axum-core = "0.5.5"
axum = { version = "0.8.6", default-features = false }
