[workspace]
members = ["cyper-core", "cyper", "cyper-axum"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/compio-rs/cyper"

[workspace.dependencies]
compio = { version = "0.17.0", default-features = false }
compio-quic = "0.6.0"
cyper-core = { path = "./cyper-core", default-features = false, version = "0.7.0" }
cyper-axum = { path = "./cyper-axum", default-features = false, version = "0.7.0" }
socket2 = "0.6"

cfg-if = "1.0.0"
futures-channel = "0.3.29"
futures-util = "0.3.30"
send_wrapper = "0.6"

rustls = { version = "0.23.13", default-features = false }
rustls-platform-verifier = "0.6.0"

hyper = "1.4.1"
hyper-util = "0.1.8"

tower = "0.5.1"
tower-service = "0.3.2"

axum-core = "0.5.0"
axum = { version = "0.8.1", default-features = false }
