[workspace]
members = ["cyper-core", "cyper", "cyper-axum", "cyper-hickory"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/compio-rs/cyper"

[workspace.dependencies]
compio = { version = "0.19.0", default-features = false }
compio-log = "0.2.0"

cyper-core = { path = "./cyper-core", default-features = false, version = "0.9.0" }
cyper-axum = { path = "./cyper-axum", default-features = false, version = "0.9.0" }
cyper-hickory = { path = "./cyper-hickory", default-features = false, version = "0.1.0" }
socket2 = "0.6"

cfg_aliases = "0.2.1"
cfg-if = "1.0.0"
futures-channel = "0.3.29"
futures-util = "0.3.30"
send_wrapper = "0.6"

rustls = { version = "0.23.13", default-features = false }
rustls-platform-verifier = "0.7.0"

http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.4.1"
hyper-util = "0.1.20"

tower = "0.5.1"
tower-service = "0.3.2"

axum-core = "0.5.0"
axum = { version = "0.8.1", default-features = false }

hickory-net = { version = "0.26", default-features = false }
hickory-resolver = { version = "0.26", default-features = false }
hickory-server = { version = "0.26" }
