[package]
name = "cyper-axum"
version = "0.8.0"
description = "axum adaptor based on cyper"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { workspace = true, features = ["net", "time"] }
compio-log = "0.1.0"
cyper-core = { workspace = true }
socket2 = { workspace = true }

axum-core = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1"] }
futures-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = ["server-auto", "service"] }
send_wrapper = { workspace = true, features = ["futures"] }
tower = { workspace = true, features = ["util"] }
tower-service = { workspace = true }

tokio = { version = "1", features = ["sync"] }


[features]
default = []
enable_log = ["compio-log/enable_log"]
http2 = ["axum/http2"]
ws = ["axum/ws"]

nightly = ["cyper-core/nightly"]

[dev-dependencies]
compio = { workspace = true, default-features = true, features = ["macros"] }
compio-ws = "0.3"
futures-channel = { workspace = true }

[[test]]
name = "ws"
required-features = ["ws"]
