[package]
name = "cyper-core"
version = "0.6.0"
description = "Core adaptors and services for compio running on hyper"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { workspace = true, features = ["io-compat", "time"] }

futures-util = { workspace = true }
hyper = { workspace = true }
send_wrapper = { workspace = true, features = ["futures"] }
