[package]
name = "cyper-core"
version = "0.9.0"
description = "Core adaptors and services for compio running on hyper"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { workspace = true, features = ["io", "time", "tls"] }

futures-util = { workspace = true }
hyper = { workspace = true }
send_wrapper = { workspace = true, features = ["futures"] }

[features]
default = []

nightly = ["compio/nightly"]
