[package]
name = "cyper"
version = "0.1.0-beta.6"
description = "HTTP client library based on compio and hyper"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { workspace = true, features = ["time", "bytes"] }
cyper-core = { workspace = true, features = ["client"] }

http = "1.0.0"
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true }

base64 = "0.22"
cookie_store = { version = "0.21", optional = true }
encoding_rs = "0.8"
http-body-util = "0.1.0"
mime = "0.3"
serde = "1"
serde_json = { version = "1", optional = true }
serde_urlencoded = "0.7"
thiserror = "1"
url = "2"

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }
cyper-core = { workspace = true, features = ["server"] }
rustls = { workspace = true, features = ["ring"] }

cookie = "0.18"
futures-channel = { workspace = true }
hyper = { workspace = true, features = ["server"] }
serde = { version = "1", features = ["derive"] }
time = "0.3"

[features]
default = ["native-tls"]
native-tls = ["cyper-core/native-tls"]
rustls = ["cyper-core/rustls"]
cookies = ["dep:cookie_store"]
json = ["dep:serde_json"]
all = ["cookies", "json", "native-tls", "rustls"]

read_buf = ["cyper-core/read_buf"]
nightly = ["read_buf", "cyper-core/nightly"]

[[test]]
name = "cookie"
required-features = ["cookies"]
