[package]
name = "cyper"
version = "0.1.0-beta.7"
description = "HTTP client library based on compio and hyper"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { workspace = true, features = ["time", "bytes"] }
compio-quic = { workspace = true, optional = true, features = [
    "platform-verifier",
] }
cyper-core = { workspace = true, features = ["client"] }

http = "1.0.0"
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true }
h3 = { version = "0.0.6", optional = true }

async-once-cell = { version = "0.5.3", optional = true }
base64 = "0.22"
cookie_store = { version = "0.21", optional = true }
encoding_rs = "0.8"
http-body-util = "0.1.0"
mime = "0.3"
serde = "1"
serde_json = { version = "1", optional = true }
serde_urlencoded = "0.7"
thiserror = "1"
url = "2"

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }
cyper-core = { workspace = true, features = ["server"] }
rustls = { workspace = true, features = ["ring"] }

cookie = "0.18"
futures-channel = { workspace = true }
hyper = { workspace = true, features = ["server"] }
serde = { version = "1", features = ["derive"] }
time = "0.3"

[features]
default = ["native-tls"]
native-tls = ["cyper-core/native-tls"]
rustls = ["cyper-core/rustls"]
cookies = ["dep:cookie_store"]
json = ["dep:serde_json"]
http3 = [
    "dep:compio-quic",
    "dep:h3",
    "dep:async-once-cell",
    "compio/h3",
    "rustls",
]
all = ["cookies", "json", "native-tls", "rustls", "http3"]

nightly = ["cyper-core/nightly"]

[[test]]
name = "cookie"
required-features = ["cookies"]
